--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -314,3 +314,15 @@ jobs:
         release-tag: ${{ env.WGPU_NATIVE_VERSION }}
         files: 'dist/*.zip;dist/commit-sha'
         repo-token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Create Release and Upload Release Asset
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        tag_name: ${{ github.ref }}
+        name: Release ${{ github.ref }}
+        body: TODO New Release.
+        draft: false
+        prerelease: false
+        files: |
+          ${{ secrets.ReleaseZipName }}.zip
+          LICENSE 
